fdo#58699 - sdremote - fix it so it closes even with no bluetooth.

Change-Id: I09588f4e4b22466843f855d99c06f616c04518ac
Signed-off-by: Jan Holesovsky <kendy@suse.cz>